--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>NyanPass</title>
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-	<script type="text/javascript" src="js/function.new.js"></script>
+	<script type="text/javascript" src="js/function.js"></script>
 </head>
 <body>
 <div id="border">
