--- a/index.html
+++ b/index.html
@@ -2,45 +2,41 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>NyanPass</title>
+	<title>Overlay v1.1c</title>
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="js/function.js"></script>
 </head>
 <body>
-	<div id="handle">
-		<div class="inside">
-			<a>FFXIV</a>
-		<span class="open" onclick="doopen()"></span>
-	</div>
-</div>
-
-<div id="outside">
 	<div class="container">
 		<div id="header">
-			<span class="encounterdetail">Version 1.4</span>
-			<span class="reload" onclick="location.reload()"></span>
-			<span class="close" onclick="dooutside()"></span>
+			<li class="raidheader">
+				<span class="encountertitle"></span>
+				<span class="duration" onclick="location.reload()"></span>
+			</li>
+			<!--
+			<div class="button bt-dps">伤害</div>
+			<div class="button bt-heal">治疗</div>
+			-->
 		</div>
 
-			<div id="line"></div>
+		<ul id="source">
+			<li>
+				<span class="job-icon"></span>
+				<div class="detail">
+					<span class="name"></span>
+					<span class="number"></span>
+					<div id="content2">
+						<span class="bar"> </span>
+					</div>
+				</div>
+			</li>
+		</ul>
 
-			<li id="eachdps">
-				<div class="icon"></div>
-				<span id="dps"></span>
-				<span class="name"></span>
-				<span class="detail"></span>
-	<div class="background">
-		<span class="bar"></span>
-	</div>
-</li>
-
-<ul class="alldps"></ul>
-
-<div id="overlay">
-	<span class="waiting">等待数据传输</span>
-</div>
-		</div>
+		<ul id="overlay">
+			<a class="waitingtitle">Nyanpass v1.1</a>
+			<a class="waiting">等待数据传输</a>
+		</ul>
 	</div>
 </body>
 </html>
