--- a/index.html
+++ b/index.html
@@ -2,41 +2,62 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Overlay v1.1c</title>
+	<title>NyanPass</title>
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="js/function.js"></script>
 </head>
 <body>
-	<div class="container">
-		<div id="header">
-			<li class="raidheader">
-				<span class="encountertitle"></span>
-				<span class="duration" onclick="location.reload()"></span>
-			</li>
-			<!--
-			<div class="button bt-dps">伤害</div>
-			<div class="button bt-heal">治疗</div>
-			-->
+	<div id="handle">
+		<div class="inside">
+			<span class="hide" onclick="hideoverlay()"></span>
+			<a>NYANPASS</a>
 		</div>
+	</div>
 
-		<ul id="source">
-			<li>
-				<span class="job-icon"></span>
-				<div class="detail">
-					<span class="name"></span>
-					<span class="number"></span>
-					<div id="content2">
-						<span class="bar"> </span>
-					</div>
+	<div id="outside">
+		<div class="container">
+			<div id="header">
+				<span class="encountertitle">Version 1.2</span>
+				<span class="duration" onclick="location.reload()"></span>
+			</div>
+
+			<div id="line"></div>
+
+			<li id="sdps">
+				<div class="icon"></div>
+				<span id="dps"></span>
+				<span class="name"></span>
+				<span class="detail"></span>
+				<div class="background">
+					<span class="bar"></span>
 				</div>
 			</li>
-		</ul>
 
-		<ul id="overlay">
-			<a class="waitingtitle">Nyanpass v1.1</a>
-			<a class="waiting">等待数据传输</a>
-		</ul>
+			<li id="shps">
+				<div class="icon"></div>
+				<span class="hps"></span>
+				<span class="name"></span>
+				<span class="detail"></span>
+				<div class="background">
+					<span class="bar"></span>
+				</div>
+			</li>
+
+			<ul class="alldps"></ul>
+			<ul class="allhps"></ul>
+
+			<div id="overlay">
+				<span class="waiting">等待数据传输</span>
+			</div>
+
+			<div id="sline"></div>
+
+			<div id="button">
+				<a class="cdps" onclick="dpstime()">伤害</a>
+				<a class="chps" onclick="hpstime()">治疗</a>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
